Backend/public/newsPage.css
header{
    font-size: 30px;
    background-image: url(https://www.cdc.gov/coronavirus/2019-ncov/images/home-banner.jpg);
    text-align: center;
    padding: 20px;
    margin: auto;
    width: 100%;
    height: 180px;
    color: white;    
}

#newsHeader{
    margin: 50px auto;
}

#widgetButton{
    position:absolute; 
    top:60px; 
    right:30px;
}

#tabs{
    width: 90%;
    margin: auto;
    padding: 10px;
    border: none;
}

#tabs > div {
    padding: 0px;
}

.card{
    background-color:#e3dfdf;
    font-size: 12px;
    /* border: solid gray 1px; */
    height:fit-content;
    box-shadow: -9px 17px 27px 0px rgba(0,0,0,0.75);
}

.nav-tabs {
    box-shadow: -9px 17px 27px -5px rgba(0,0,0,0.75);
}

.card-body{
    margin: auto;
}

#newsImage{
    width: 300px;
    height: 100%;
    float: right;
    padding-top: 2mm;
    
}

#innerContainer {
    width: 70%;
    display: inline-block;
    padding: 20px;
}

.ui-widget-content a.readMore{
    color: blue;
    padding-left: 5mm;
}

#bottomSpace{
    padding-bottom: 40mm;
}

.ui-tabs .ui-tabs-nav li {
    width: 24.78%;
}

